[b][color=orange]v4.14[/color], 07.04.2019[/b][list]
[*]Prevent a lua error in Reminder Module.
[*]Alot of more Nameplate settings in my install.
[*]Update the appearance for my FlightPoints frame.
[*]Added Azerite Item Tooltip back.
[*]Minor tweaks to Unitframe install.
[*]Add Guildbest Frame on the LFG Frame > Mythic Keystones.
[*]Chinese Locals from Simon@ciki <3.[/list]

[b][color=orange]v4.13[/color], 12.03.2019[/b][list]
[*]Remove my own System DataText i use now the ElvUI Datatext.
[*]Removed Chat Menu, i never used it.
[*]Removed Chat Buttons.
[*]Adjust the Layout due to the new Voice Chat Buttons.
[*]Add new Nameplate settings to my Layout/CVar Install steps.
[*]Small UnitFrame settings update.[/list]

[b][color=orange]v4.12[/color], 25.02.2019[/b][list]
[*]Adjust my ActionBar appereance. Looks nice with my new Masque skin.
[*]Take account the the new ItemLevel Font changes.[/list]

[b][color=orange]v4.11[/color], 24.02.2019[/b][list]
[*]Forgot to change a tag in the Healer Layout.[/list]

[b][color=orange]v4.10[/color], 24.02.2019[/b][list]
[*]Changed the Armory Mode to work with the new Character Info from ElvUI.
[*]Many Skin updates.
[*]Added a MicroBar Tooltip.
[*]Added a Community Chat Hider. Credits Nnogga.
[*]Added NamePlate Scrolling Text.Credits Mpstark[/list]

[b][color=orange]v4.09[/color], 26.01.2019[/b][list]
[*]Dont load the AzeriteButtons if the ElvUI Character Skin is disabled.
[*]Add a waring texture for missing gems.
[*]Update ls_Toast skin and profile.[/list]

[b][color=orange]v4.08[/color], 21.01.2019[/b][list]
[*]Remove some code from the Collection Skin to prevent a taint.
[*]Remove RealmInfo from the Tooltip. Go away...
[*]Added back the Media section to change some additional fonts.
[*]More work on my Armory. Slot Gradiation, socket links, etc.[/list]

[b][color=orange]v4.07[/color], 11.01.2019[/b][list]
[*]Fixed an error CombatFeedBack Text if UnitFrames are disabled.
[*]Fixed an error with LSM calls.