@@ -1,3 +1,11 @@
+** v4.15 14.04.2019**
+* Added an Emoticon Frame to the chat.
+* Fixed some lua errors if you use Dual Profiles.
+* Added Target Name to the ElvUI Nameplate Castbars.
+* Added a Talent Manager, where you can save different presets.
+* Added back my chatBar. Disabled by default.
+* Added Raid Progress Info to the Tooltip (hold shift).
+
 ** v4.14 07.04.2019**
 * Prevent a lua error in Reminder Module.
 * Alot of more Nameplate settings in my install.
