@@ -1,17 +1,17 @@
 ## Interface: 80100
 ## Author: Merathilis
 ## Credits: Benik, Blazeflack, Azilroka, Simpy, Whiro, Darth Predator, fgprodigal, Elv & all AddOn Authors who inspired me.
-## Version: 4.14
+## Version: 4.15
 ## Title: |cFF00c0faElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
 ## RequiredDeps: ElvUI
 ## DefaultState: Enabled
-## SavedVariables: MERData, TalentProfilesGlobalDB
-## SavedVariablesPerCharacter: MERDataPerChar, TalentProfilesDB
+## SavedVariables: MERData
+## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, AddOnSkins, BigWigs, ls_Toasts
-## X-ElvVersion: 11.07
-## X-Curse-Packaged-Version: 4.14
+## X-ElvVersion: 11.10
+## X-Curse-Packaged-Version: 4.15
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
