@@ -1,3 +1,11 @@
+[b][color=orange]v4.15[/color], 14.04.2019[/b][list]
+[b]Added an Emoticon Frame to the chat.
+[b]Fixed some lua errors if you use Dual Profiles.
+[b]Added Target Name to the ElvUI Nameplate Castbars.
+[b]Added a Talent Manager, where you can save different presets.
+[b]Added back my chatBar. Disabled by default.
+[b]Added Raid Progress Info to the Tooltip (hold shift).[/list]
+
 [b][color=orange]v4.14[/color], 07.04.2019[/b][list]
 [*]Prevent a lua error in Reminder Module.
 [*]Alot of more Nameplate settings in my install.
